--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ install:
   - brew tap --repair
 
 script:
-  - brew install -v gridcoin --HEAD --with-cli
+  - brew install gridcoin --HEAD --with-cli
