--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 os: osx
 language: objective-c
 osx_image: xcode10.1
+before_install:
+- brew update
 install:
 - mkdir -p $(brew --repo)/Library/Taps/git-jiro
 - ln -s $PWD $(brew --repo)/Library/Taps/git-jiro/homebrew-jiro
