Install depencendies separately
This is done because installing dependencies in script extends the
time it takes for the installation to complete, causing travis_wait
to time out after 20 minutes.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
 - mkdir -p $(brew --repo)/Library/Taps/git-jiro
 - ln -s $PWD $(brew --repo)/Library/Taps/git-jiro/homebrew-jiro
 - brew tap --repair
+- brew install --only-dependencies gridcoin
 script:
 - travis_wait brew install gridcoin
 before_deploy:
