--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,3 +61,4 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
           asset_path: $GITHUB_WORKSPACE/gridcoinresearch_bigsur.dmg
           asset_name: gridcoinresearch_bigsur.dmg
+          asset_content_type: application/zip
