--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
           mkdir -p $(brew --repo)/Library/Taps/git-jiro
           ln -s $GITHUB_WORKSPACE $(brew --repo)/Library/Taps/git-jiro/homebrew-jiro
           brew tap --repair
-          brew install --only-dependencies gridcoin
+          brew install --only-dependencies roboticmind/forkofjiro/gridcoin
           
       - name: install gridcoin
         run: |
