--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,10 +37,8 @@ jobs:
 
       - name: build gridcoin dmg
         run: |
-          cd `brew --prefix`/Cellar/gridcoin/* && `brew --prefix`/Cellar/qt@5/*/bin/macdeployqt gridcoinresearch.app -verbose=2 -dmg
-          pwd
-          ls
-          cp gridcoinresearch.dmg $GITHUB_WORKSPACE/gridcoinresearch_bigsur.dmg
+          cd `brew --prefix`/Cellar/gridcoin/* && `brew --prefix`/Cellar/qt@5/*/bin/macdeployqt Gridcoin.app -verbose=2 -dmg
+          cp Gridcoin.dmg $GITHUB_WORKSPACE/gridcoinresearch_bigsur.dmg
 
       - name: Create Release
         id: create_release
